fix improved spacing

--- a/pages/radio/styles.module.scss
+++ b/pages/radio/styles.module.scss
@@ -52,7 +52,7 @@ $Field-Shadow: 4px 8px 16px #00000010;
   display: flex;
   justify-content: center;
   gap: 0.5rem;
-  padding: 1rem 0 0;
+  padding: 1rem 0 0.5rem;
 }
 
 .input {
